asset/css/style.css
* {
  box-sizing: border-box;
}
html {
  font-size: 10px;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

.header-icon {
  background: white;
}

nav.navbar {
  width: 100%;
  background: rgba(219, 154, 187, 0.5);
  background-color: #333;
  display: inline-flex;
  justify-content: space-between;
}

.links a {
  float: left;
  display: block;
  color: #f2f2f2;
  text-align: center;
  padding: 1.4rem;
  text-decoration: none;
  font-size: 1.4rem;
}

.links a:hover {
  background: rgba(219, 154, 187, 1);
  color: black;
}

.topPage {
  background: rgb(0, 212, 255);
  background: linear-gradient(
    140deg,
    rgba(0, 212, 255, 1) 0%,
    rgba(255, 163, 127, 1) 100%
  );
  border-bottom: 1px solid slategrey;
  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.25);
}

.contact-list a {
  color: blue;
}

#logo {
  width: 100%;
  margin: 2rem auto;
}
h1 {
  /* hide the H1 until new title */
  clip: rect(1px, 1px, 1px, 1px);
  clip-path: inset(50%);
  height: 1px;
  width: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;

  font-size: 1.8rem;
  font-weight: 600;
  text-transform: uppercase;
  margin-left: 0.5rem;
  text-align: center;
}
.photo.container {
  margin: 0.5rem;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: flex-start;
}
.photo.me {
  width: 60%;
  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.25);
  border-radius: 1rem;
  display: flex;
  align-items: flex-start;
}
.text.container {
  background: white;
  margin: 0.5rem;
  padding: 1rem;
  border-radius: 0.5rem;
  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.25);
}
#me {
  text-align: center;
  text-transform: uppercase;
  font-weight: 400;
  margin: 0;
}
body {
  background: rgb(252, 251, 248);
}
h2 {
  font-size: 2rem;
  margin: 1rem;
}
h3 {
  font-size: 1.7rem;
}
p {
  font-size: 1.4rem;
  margin: 1rem 0;
  line-height: 1.8rem;
}

.tech-image {
  width: 50px;
  height: 50px;
  display: flex;
  justify-content: center;
}
.tech-text {
  display: flex;
  justify-content: center;
}
.tech-list.container {
  margin-top: 1.5rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.project-image {
  width: 100%;
  margin: 0.2rem auto;
  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.25);
}

.contact-list {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  font-size: 1.2rem;
}
.contact-logo {
  width: 25px;
  height: 25px;
  margin-right: 0.5rem;
}
.contact-list a {
  margin: 1rem;
}

@media screen and (min-width: 768px) {
  nav.navbar {
    height: 6.7vh;
  }
  .links a {
    font-size: 25px;
  }
  .topPage {
    height: 93.3vh;
  }
  #logo {
    margin: 7% auto;
  }
  h1 {
    font-size: 4rem;
  }
  h2 {
    font-size: 3rem;
    text-align: center;
    margin: 1rem;
  }
  h3 {
    font-size: 2rem;
    text-decoration: underline;
  }
  .tech-image {
    width: 100px;
    height: 100px;
  }
  p {
    font-size: 1.6rem;
  }
  span {
    font-size: 1.5rem;
  }
  .text.container {
    width: 80%;
    margin: 0.5rem auto;
  }
  .contact-logo {
    width: 50px;
    height: 50px;
  }
  .contact a {
    font-size: 1.6rem;
  }
}

